--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -3232,8 +3232,8 @@
     "\n",
     "    # policy_net = model(pretrained).to(device)\n",
     "    # target_net = model(pretrained).to(device)\n",
-    "    policy_net = model\n",
-    "    target_net = model\n",
+    "    policy_net = model.to(device)\n",
+    "    target_net = model.to(device)\n",
     "    target_net.load_state_dict(policy_net.state_dict())\n",
     "    target_net.eval()\n",
     "\n",
@@ -3261,8 +3261,8 @@
     "                # found, so we pick action with the larger expected reward\n",
     "                node_state = torch.tensor(state1[:10], dtype=torch.float32)\n",
     "                pod_quota = torch.tensor(state1[10:], dtype=torch.float32)\n",
-    "                node_state = node_state.unsqueeze(0)\n",
-    "                pod_quota = pod_quota.unsqueeze(0)\n",
+    "                node_state = node_state.unsqueeze(0).to(device)\n",
+    "                pod_quota = pod_quota.unsqueeze(0).to(device)\n",
     "                output = policy_net(node_state, pod_quota)\n",
     "                action1 = output.max(1)[1].view(1, 1)\n",
     "                action1 = int(action1)\n",
@@ -3276,7 +3276,7 @@
     "\n",
     "    def optimize_model():\n",
     "        # If memory is not enough, do nothing\n",
-    "        if len(memory) < batch_size:\n",
+    "        if len(memory) < batch_size * 10:\n",
     "            return\n",
     "        \n",
     "        # Sample a batch from memory\n",
@@ -3352,7 +3352,7 @@
     "            reward, reward_details = ew.reward()\n",
     "\n",
     "            # Increase wrong shot count if the agent tries to schedule even though there is no pending pod reward_details[-1]\n",
-    "            if reward_details[-1] != -5:\n",
+    "            if reward_details[-1] == -5:\n",
     "                wrong_shot += 1\n",
     "\n",
     "            # Accumulate reward\n",
@@ -3381,6 +3381,20 @@
     "\n",
     "    # Return the trained model\n",
     "    return policy_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kube_hr_scheduler.scheduler.sim_hr_scheduler import SimHrScheduler\n",
+    "from kube_hr_scheduler.strategies.model.default import Model\n",
+    "import math\n",
+    "from tqdm import tqdm\n",
+    "from IPython.display import clear_output\n",
+    "\n"
    ]
   },
   {
