Add more reward factor

--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -3184,8 +3184,16 @@
     "        return ret\n",
     "    \n",
     "    def penalty_wrong_decision(self):\n",
+    "\n",
+    "        cpu_req = self.ew.env1.cluster.pending_pods[0].spec['cpu_ratio']\n",
+    "        mem_req = self.ew.env1.cluster.pending_pods[0].spec['mem_ratio']\n",
+    "\n",
+    "        cpu_avail, mem_avail = self.ew.env1.cluster.nodes[self.action1 - 1].get_node_rsrc_ratio()\n",
+    "\n",
     "        # If the agent tries to schedule even though there is no pending pod, penalize it\n",
     "        if self.action1 != 0 and len(self.env1.cluster.pending_pods) == 0:\n",
+    "            return -5\n",
+    "        elif self.action1 != 0 and cpu_avail + cpu_req > 1 or mem_avail + mem_req > 1:\n",
     "            return -5\n",
     "        else:\n",
     "            return 0\n",
@@ -3220,18 +3228,17 @@
     "\n",
     "def train_w_model(model, scenario, episodes=1000):\n",
     "\n",
-    "    ew = EnvWrapper(scenario)\n",
-    "    replay_memory_capacity = 10000\n",
+    "    # Hyperparameters\n",
     "    batch_size = 32\n",
     "    gamma = 0.999\n",
     "    epsilon_start = 0.9\n",
     "    epsilon_end = 0.05\n",
     "    epsilon_decay = 200\n",
     "    target_update = 10\n",
-    "    wrong_shot = 0\n",
+    "    replay_memory_capacity = 20000\n",
     "\n",
-    "    # policy_net = model(pretrained).to(device)\n",
-    "    # target_net = model(pretrained).to(device)\n",
+    "    ew = EnvWrapper(scenario)\n",
+    "\n",
     "    policy_net = model.to(device)\n",
     "    target_net = model.to(device)\n",
     "    target_net.load_state_dict(policy_net.state_dict())\n",
@@ -3284,10 +3291,10 @@
     "        states, actions, next_states, rewards = zip(*batch)\n",
     "\n",
     "        # Convert to torch tensor\n",
-    "        states = torch.tensor(states, dtype=torch.float32)\n",
-    "        actions = torch.tensor(actions, dtype=torch.long).unsqueeze(1)\n",
-    "        next_states = torch.tensor(next_states, dtype=torch.float32)\n",
-    "        rewards = torch.tensor(rewards, dtype=torch.float32)\n",
+    "        states = torch.tensor(states, dtype=torch.float32).to(device)\n",
+    "        actions = torch.tensor(actions, dtype=torch.long).unsqueeze(1).to(device)\n",
+    "        next_states = torch.tensor(next_states, dtype=torch.float32).to(device)\n",
+    "        rewards = torch.tensor(rewards, dtype=torch.float32).to(device)\n",
     "\n",
     "        # Compute Q(s_t, a) - the model computes Q(s_t), then we select the columns of actions taken (actions)\n",
     "        q_values = policy_net(states[:, :10], states[:, 10:]).gather(1, actions)\n",
@@ -3336,6 +3343,9 @@
     "        # Wrong shot count init\n",
     "        wrong_shot = 0\n",
     "\n",
+    "        # Default Scheduler done step\n",
+    "        default_done_step = 0\n",
+    "\n",
     "        # Initialize the environment and state\n",
     "        (state1, reward1, done1), (state2, reward2, done2) = ew.reset()\n",
     "        for t in count():\n",
@@ -3351,6 +3361,9 @@
     "            # Reward\n",
     "            reward, reward_details = ew.reward()\n",
     "\n",
+    "            # # Temporary : Chnage reward\n",
+    "            # reward = reward1\n",
+    "\n",
     "            # Increase wrong shot count if the agent tries to schedule even though there is no pending pod reward_details[-1]\n",
     "            if reward_details[-1] == -5:\n",
     "                wrong_shot += 1\n",
@@ -3365,16 +3378,25 @@
     "            optimize_model()\n",
     "\n",
     "            # Print out the progress every 100 steps\n",
-    "            if t % 5000 == 0:\n",
-    "                print(f\"Episode: {i_episode}, Step: {t}, Reward: {reward}, # of Job scheduled: {len(ew.env1.cluster.running_pods) + len(ew.env1.cluster.terminated_pods)}\\nWrong shot: {wrong_shot}, Reward details: {reward_details}\")\n",
+    "            if t % 5000 == 0 and 'trace' in scenario:\n",
+    "                # print(f\"# of scheduled: {len(ew.env1.cluster.running_pods)} / # of done: {len(ew.env1.cluster.terminated_pods)}\")\n",
+    "                print(f\"Episode: {i_episode}, Step: {t}, Reward: {reward},\\n# of Job scheduled: {len(ew.env1.cluster.running_pods) + len(ew.env1.cluster.terminated_pods)},Wrong shot: {wrong_shot}, Reward details: {reward_details}\")\n",
     "\n",
     "            # Increase the step\n",
     "            steps_done += 1\n",
+    "\n",
+    "            if done2:\n",
+    "                default_done_step = t\n",
     "\n",
     "            if done1: # or done2:\n",
     "                episode_durations.append(acc_reward)\n",
     "                plot_durations()\n",
     "                break\n",
+    "\n",
+    "        print(f\"Episode: {i_episode} done at step {t}, Acc Reward: {acc_reward},\\n# of Job scheduled: {len(ew.env1.cluster.running_pods) + len(ew.env1.cluster.terminated_pods)}, Wrong shot: {wrong_shot}, Reward details: {reward_details}\")\n",
+    "        if default_done_step != 0:\n",
+    "            print(f\"Default was faster by {default_done_step - t} steps\")\n",
+    "\n",
     "        # Update the target network, copying all weights and biases in DQN\n",
     "        if i_episode % target_update == 0:\n",
     "            target_net.load_state_dict(policy_net.state_dict())\n",
