--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -3185,15 +3185,20 @@
     "    \n",
     "    def penalty_wrong_decision(self):\n",
     "\n",
-    "        cpu_req = self.ew.env1.cluster.pending_pods[0].spec['cpu_ratio']\n",
-    "        mem_req = self.ew.env1.cluster.pending_pods[0].spec['mem_ratio']\n",
-    "\n",
-    "        cpu_avail, mem_avail = self.ew.env1.cluster.nodes[self.action1 - 1].get_node_rsrc_ratio()\n",
-    "\n",
-    "        # If the agent tries to schedule even though there is no pending pod, penalize it\n",
     "        if self.action1 != 0 and len(self.env1.cluster.pending_pods) == 0:\n",
     "            return -5\n",
-    "        elif self.action1 != 0 and cpu_avail + cpu_req > 1 or mem_avail + mem_req > 1:\n",
+    "        \n",
+    "        if len(self.env1.cluster.pending_pods) == 0:\n",
+    "            return 0\n",
+    "\n",
+    "        cpu_req = self.env1.cluster.pending_pods[0].spec['cpu_ratio']\n",
+    "        mem_req = self.env1.cluster.pending_pods[0].spec['mem_ratio']\n",
+    "\n",
+    "        cpu_avail, mem_avail = self.env1.cluster.nodes[self.action1 - 1].get_node_rsrc_ratio()\n",
+    "\n",
+    "        # If the agent tries to schedule even though there is no pending pod, penalize it\n",
+    "\n",
+    "        if self.action1 != 0 and cpu_avail + cpu_req > 1 or mem_avail + mem_req > 1:\n",
     "            return -5\n",
     "        else:\n",
     "            return 0\n",
