--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base Path: /Users/swkim/Documents/coding/thesis/kube_my_scheduler/notebook/..\n"
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
      ]
     }
    ],
@@ -3914,6 +3914,354 @@
    ],
    "source": [
     "train('scenario-10l-3m-1000p-30m.csv', False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample1 = [[0.99, 0.90, 0.80, 0.80, 0.95, 0.95, 0.90, 0.85, 0.0, 0.0, 0.0, 0.0]] # Ideal action : 0\n",
+    "sample2 = [[0.99, 0.90, 0.80, 0.80, 0.95, 0.95, 0.90, 0.85, 0.0, 0.0, 0.6, 0.7]] # Ideal action : 5\n",
+    "sample3 = [[0.99, 0.40, 0.20, 0.98, 0.80, 0.80, 0.20, 0.20, 0.70, 0.70, 0.5, 0.5]] # Ideal action : 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/swkim/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n",
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "from kube_mm_scheduler.model.promes import Model as Promes\n",
+    "\n",
+    "promes = Promes(True, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model(\n",
+      "  (net5_): Net5_(\n",
+      "    (net3_): Net3_(\n",
+      "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
+      "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
+      "      (fc2): Linear(in_features=32, out_features=16, bias=True)\n",
+      "      (fc3): Linear(in_features=16, out_features=16, bias=True)\n",
+      "      (fc4): None\n",
+      "    )\n",
+      "    (fc1_3_1): Linear(in_features=2, out_features=16, bias=True)\n",
+      "    (fc1_3_2): Linear(in_features=2, out_features=16, bias=True)\n",
+      "    (fc1_3_3): Linear(in_features=2, out_features=16, bias=True)\n",
+      "    (fc1_3_4): Linear(in_features=2, out_features=16, bias=True)\n",
+      "    (fc1_3_5): Linear(in_features=2, out_features=16, bias=True)\n",
+      "    (fc2_1): Linear(in_features=32, out_features=16, bias=True)\n",
+      "    (fc3_1): None\n",
+      "    (fc2_2): Linear(in_features=32, out_features=16, bias=True)\n",
+      "    (fc3_2): None\n",
+      "    (fc2_3): Linear(in_features=32, out_features=16, bias=True)\n",
+      "    (fc3_3): None\n",
+      "    (fc2_4): Linear(in_features=32, out_features=16, bias=True)\n",
+      "    (fc3_4): None\n",
+      "    (fc2_5): Linear(in_features=32, out_features=16, bias=True)\n",
+      "    (fc3_5): None\n",
+      "  )\n",
+      "  (fc3): Linear(in_features=80, out_features=64, bias=True)\n",
+      "  (fc4): Linear(in_features=64, out_features=32, bias=True)\n",
+      "  (fc5): Linear(in_features=32, out_features=16, bias=True)\n",
+      "  (fc6): Linear(in_features=16, out_features=6, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(promes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "from kube_mm_scheduler.model.net1 import Model as Net1\n",
+    "from kube_mm_scheduler.model.net3 import Model as Net3\n",
+    "from kube_mm_scheduler.model.net5 import Model as Net5\n",
+    "from kube_mm_scheduler.model.promes import Model as Promes\n",
+    "\n",
+    "net1 = Net1(True, True)\n",
+    "net3 = Net3(True, True)\n",
+    "promes = Promes(True, True)\n",
+    "\n",
+    "# predict the score for each action\n",
+    "def predict_score(data, model=promes):\n",
+    "    print(f\"Sample : {data}\")\n",
+    "    model.eval()\n",
+    "\n",
+    "    if not torch.is_tensor(data):\n",
+    "        data = torch.tensor(data, dtype=torch.float32)\n",
+    "\n",
+    "    if len(data.shape) == 1:\n",
+    "        data = data.unsqueeze(0)\n",
+    "\n",
+    "    data1 = data[:, :10]\n",
+    "    data2 = data[:, 10:]\n",
+    "    output = model(data1, data2)\n",
+    "    # Softmax\n",
+    "    output = F.softmax(output, dim=1)\n",
+    "\n",
+    "    decision = output.max(1)[1].item()\n",
+    "    if decision == 0:\n",
+    "        print(\"No action\")\n",
+    "    else:\n",
+    "        print(f\"Action: Node {decision}\")\n",
+    "\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample : [[0.99, 0.9, 0.8, 0.8, 0.95, 0.95, 0.9, 0.85, 0.0, 0.0, 0.0, 0.0]]\n",
+      "No action\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000e+00, 4.3440e-44, 7.4269e-44, 7.9874e-44, 5.3249e-44, 7.1466e-44]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_score(sample1, net3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample : [[0.99, 0.9, 0.8, 0.8, 0.95, 0.95, 0.9, 0.85, 0.0, 0.0, 0.6, 0.7]]\n",
+      "Action: Node 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6.0083e-30, 4.7169e-19, 1.2441e-12, 2.5197e-22, 2.3335e-17, 1.0000e+00]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_score(sample2, net3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample : [[0.99, 0.4, 0.2, 0.98, 0.8, 0.8, 0.2, 0.2, 0.7, 0.7, 0.5, 0.5]]\n",
+      "Action: Node 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0313e-28, 4.9154e-24, 9.6637e-26, 2.2801e-13, 1.0000e+00, 2.7532e-11]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_score(sample3, net3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get the state from the real environment with trace2017_1.csv\n",
+    "\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv\n",
+    "\n",
+    "env = gym.make('SimKubeEnv-v0', scenario_file='trace2017_1.csv')\n",
+    "env.reset()\n",
+    "\n",
+    "state = env.get_state()\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.02, 0.04, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
+       "        0.  ], dtype=float32),\n",
+       " 0.0,\n",
+       " False,\n",
+       " {'last_pod': <kube_sim_gym.components.pod.Pod at 0x7f84f1652a30>,\n",
+       "  'is_scheduled': True})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.step(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "env2 = copy.copy(env)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.02, 0.04, 0.02, 0.04, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
+       "        0.  ], dtype=float32),\n",
+       " 0.2,\n",
+       " False,\n",
+       " {'last_pod': <kube_sim_gym.components.pod.Pod at 0x7f84f1652b80>,\n",
+       "  'is_scheduled': True})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env2.step(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.02, 0.04, 0.02, 0.04, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
+       "       0.  ], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.get_state()"
    ]
   },
   {
