--- a/notebook/promes.ipynb
+++ b/notebook/promes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -63,42 +63,19 @@
      "output_type": "stream",
      "text": [
       "ActorCriticPolicy(\n",
-      "  (features_extractor): PromesPPO(\n",
-      "    (net): Net5_(\n",
-      "      (net3_): Net3_(\n",
-      "        (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
-      "        (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
-      "        (fc2): Linear(in_features=32, out_features=16, bias=True)\n",
-      "        (fc3): Linear(in_features=16, out_features=16, bias=True)\n",
-      "        (fc4): None\n",
-      "      )\n",
-      "      (fc1_3_1): Linear(in_features=2, out_features=16, bias=True)\n",
-      "      (fc1_3_2): Linear(in_features=2, out_features=16, bias=True)\n",
-      "      (fc1_3_3): Linear(in_features=2, out_features=16, bias=True)\n",
-      "      (fc1_3_4): Linear(in_features=2, out_features=16, bias=True)\n",
-      "      (fc1_3_5): Linear(in_features=2, out_features=16, bias=True)\n",
-      "      (fc2_1): Linear(in_features=32, out_features=16, bias=True)\n",
-      "      (fc3_1): None\n",
-      "      (fc2_2): Linear(in_features=32, out_features=16, bias=True)\n",
-      "      (fc3_2): None\n",
-      "      (fc2_3): Linear(in_features=32, out_features=16, bias=True)\n",
-      "      (fc3_3): None\n",
-      "      (fc2_4): Linear(in_features=32, out_features=16, bias=True)\n",
-      "      (fc3_4): None\n",
-      "      (fc2_5): Linear(in_features=32, out_features=16, bias=True)\n",
-      "      (fc3_5): None\n",
-      "    )\n",
+      "  (features_extractor): FlattenExtractor(\n",
+      "    (flatten): Flatten(start_dim=1, end_dim=-1)\n",
       "  )\n",
       "  (mlp_extractor): MlpExtractor(\n",
       "    (shared_net): Sequential()\n",
       "    (policy_net): Sequential(\n",
-      "      (0): Linear(in_features=80, out_features=64, bias=True)\n",
+      "      (0): Linear(in_features=12, out_features=64, bias=True)\n",
       "      (1): Tanh()\n",
       "      (2): Linear(in_features=64, out_features=64, bias=True)\n",
       "      (3): Tanh()\n",
       "    )\n",
       "    (value_net): Sequential(\n",
-      "      (0): Linear(in_features=80, out_features=64, bias=True)\n",
+      "      (0): Linear(in_features=12, out_features=64, bias=True)\n",
       "      (1): Tanh()\n",
       "      (2): Linear(in_features=64, out_features=64, bias=True)\n",
       "      (3): Tanh()\n",
@@ -117,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,18 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for ActorCriticPolicy:\n\tMissing key(s) in state_dict: \"features_extractor.net.net3_.fc1_1.weight\", \"features_extractor.net.net3_.fc1_1.bias\", \"features_extractor.net.net3_.fc1_2.weight\", \"features_extractor.net.net3_.fc1_2.bias\", \"features_extractor.net.net3_.fc2.weight\", \"features_extractor.net.net3_.fc2.bias\", \"features_extractor.net.net3_.fc3.weight\", \"features_extractor.net.net3_.fc3.bias\", \"features_extractor.net.fc1_3_1.weight\", \"features_extractor.net.fc1_3_1.bias\", \"features_extractor.net.fc1_3_2.weight\", \"features_extractor.net.fc1_3_2.bias\", \"features_extractor.net.fc1_3_3.weight\", \"features_extractor.net.fc1_3_3.bias\", \"features_extractor.net.fc1_3_4.weight\", \"features_extractor.net.fc1_3_4.bias\", \"features_extractor.net.fc1_3_5.weight\", \"features_extractor.net.fc1_3_5.bias\", \"features_extractor.net.fc2_1.weight\", \"features_extractor.net.fc2_1.bias\", \"features_extractor.net.fc2_2.weight\", \"features_extractor.net.fc2_2.bias\", \"features_extractor.net.fc2_3.weight\", \"features_extractor.net.fc2_3.bias\", \"features_extractor.net.fc2_4.weight\", \"features_extractor.net.fc2_4.bias\", \"features_extractor.net.fc2_5.weight\", \"features_extractor.net.fc2_5.bias\". \n\tsize mismatch for mlp_extractor.policy_net.0.weight: copying a param with shape torch.Size([64, 12]) from checkpoint, the shape in current model is torch.Size([64, 80]).\n\tsize mismatch for mlp_extractor.value_net.0.weight: copying a param with shape torch.Size([64, 12]) from checkpoint, the shape in current model is torch.Size([64, 80]).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[107], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Load weights to pt_model\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m pt_model\u001b[39m.\u001b[39;49mload_state_dict(weights)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/nn/modules/module.py:1604\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m   1599\u001b[0m         error_msgs\u001b[39m.\u001b[39minsert(\n\u001b[1;32m   1600\u001b[0m             \u001b[39m0\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMissing key(s) in state_dict: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1601\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(k) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m missing_keys)))\n\u001b[1;32m   1603\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(error_msgs) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m-> 1604\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mError(s) in loading state_dict for \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1605\u001b[0m                        \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(error_msgs)))\n\u001b[1;32m   1606\u001b[0m \u001b[39mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for ActorCriticPolicy:\n\tMissing key(s) in state_dict: \"features_extractor.net.net3_.fc1_1.weight\", \"features_extractor.net.net3_.fc1_1.bias\", \"features_extractor.net.net3_.fc1_2.weight\", \"features_extractor.net.net3_.fc1_2.bias\", \"features_extractor.net.net3_.fc2.weight\", \"features_extractor.net.net3_.fc2.bias\", \"features_extractor.net.net3_.fc3.weight\", \"features_extractor.net.net3_.fc3.bias\", \"features_extractor.net.fc1_3_1.weight\", \"features_extractor.net.fc1_3_1.bias\", \"features_extractor.net.fc1_3_2.weight\", \"features_extractor.net.fc1_3_2.bias\", \"features_extractor.net.fc1_3_3.weight\", \"features_extractor.net.fc1_3_3.bias\", \"features_extractor.net.fc1_3_4.weight\", \"features_extractor.net.fc1_3_4.bias\", \"features_extractor.net.fc1_3_5.weight\", \"features_extractor.net.fc1_3_5.bias\", \"features_extractor.net.fc2_1.weight\", \"features_extractor.net.fc2_1.bias\", \"features_extractor.net.fc2_2.weight\", \"features_extractor.net.fc2_2.bias\", \"features_extractor.net.fc2_3.weight\", \"features_extractor.net.fc2_3.bias\", \"features_extractor.net.fc2_4.weight\", \"features_extractor.net.fc2_4.bias\", \"features_extractor.net.fc2_5.weight\", \"features_extractor.net.fc2_5.bias\". \n\tsize mismatch for mlp_extractor.policy_net.0.weight: copying a param with shape torch.Size([64, 12]) from checkpoint, the shape in current model is torch.Size([64, 80]).\n\tsize mismatch for mlp_extractor.value_net.0.weight: copying a param with shape torch.Size([64, 12]) from checkpoint, the shape in current model is torch.Size([64, 80])."
+     ]
     }
    ],
    "source": [
@@ -313,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,24 +303,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-4.6821,  1.2452, -1.6478, -1.4470, -0.2967,  4.0329]],\n",
+       "(tensor([[-6.2938,  1.9472, -0.3218,  0.2534,  2.2748, -3.2760]],\n",
        "        grad_fn=<AddmmBackward0>),\n",
-       " tensor([[11.3650]], grad_fn=<AddmmBackward0>))"
+       " tensor([[25.3541]], grad_fn=<AddmmBackward0>))"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pt_model(sample1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-6.2938,  1.9472, -0.3218,  0.2534,  2.2748, -3.2760]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pt_model(sample1)[0]"
    ]
   },
   {
