Add unbalanced scenario + new training

--- a/notebook/sb.ipynb
+++ b/notebook/sb.ipynb
@@ -9693,7 +9693,7 @@
     "    acc_rew1 = 0\n",
     "    acc_rew2 = 0\n",
     "\n",
-    "    print(\"Start testing...\")\n",
+    "    print(f\"Testing with {scenario_file} (my model vs. default)\")\n",
     "    while not done1 or not done2:\n",
     "        if not done1:\n",
     "            # action1, _ = model.predict(obs1)\n",
