--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prep"
+    "## Prep"
    ]
   },
   {
@@ -139,6 +139,7 @@
    "source": [
     "from IPython.display import clear_output\n",
     "from notebook.net_arch import *\n",
+    "import glob\n",
     "\n",
     "def train_rl_model(json_tracker_fname):\n",
     "\n",
@@ -192,6 +193,14 @@
     "        print(f\"Model file does not exist: {model_fname}\")\n",
     "        return\n",
     "    \n",
+    "    # If last_idx is not -1 and there's a model trained in training/model, then load the model\n",
+    "    if last_idx != -1 and glob.glob(f'training/model/{model_fname}_*'):\n",
+    "        # Load the model with the latest date\n",
+    "        model_fpaths = glob.glob(f'training/model/{model_fname}_*')\n",
+    "        model_fpaths.sort()\n",
+    "        model_fpath = model_fpaths[-1]\n",
+    "        print(f\"Loading the model from {model_fpath}\")\n",
+    "    \n",
     "    # Save the model, append _{date} to the model name\n",
     "    trained_model_fname = f'{model_fname}_{date}'\n",
     "    trained_model_fpath = f'training/model/{trained_model_fname}'\n",
@@ -229,14 +238,6 @@
     "\n",
     "        \n",
     "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Main approach : Pretraining PROMES ahead"
    ]
   },
   {
@@ -429,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model"
+    "## Models"
    ]
   },
   {
@@ -437,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multi-modal Dynamic (Untrained + Pretrained)"
+    "### PPO Multi-modal Dynamic (Untrained + Pretrained)"
    ]
   },
   {
@@ -719,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single-modal Dynamic (Untrained + Pretrained)"
+    "### PPO Single-modal Dynamic (Untrained + Pretrained)"
    ]
   },
   {
@@ -963,6 +964,455 @@
    "source": [
     "# model_ppo_mm_pr_dynamic\n",
     "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_ppo_sm_pr_dynamic'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DQN Multi-modal Dynamic (Untrained + Pretrained)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FE_MM_net(BaseFeaturesExtractor):\n",
+    "    def __init__(self, observation_space: spaces.Box, features_dim: int = 16):\n",
+    "        super(FE_MM_net, self).__init__(observation_space, features_dim)\n",
+    "        self.fc1_1 = nn.Linear(10, 16) # 5 Nodes status (CPU, Memory)\n",
+    "        self.fc1_2 = nn.Linear(2, 16)   # Pod quota (CPU, Memory)\n",
+    "        self.fc2_1 = nn.Linear(16, 8)\n",
+    "        self.fc2_2 = nn.Linear(16, 8)\n",
+    "        self.fc3 = nn.Linear(16, 16)    # Concatenated vector\n",
+    "        self.fc4 = nn.Linear(16, 16)    # Last layer of FE_net\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x1 = x[:, :10]\n",
+    "        x2 = x[:, 10:]\n",
+    "        x1 = F.relu(self.fc1_1(x1))  \n",
+    "        x2 = F.relu(self.fc1_2(x2))\n",
+    "        x1 = F.relu(self.fc2_1(x1))\n",
+    "        x2 = F.relu(self.fc2_2(x2))\n",
+    "        x = torch.cat((x1, x2), dim=1)\n",
+    "        x = F.relu(self.fc3(x))\n",
+    "        x = self.fc4(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy_kwargs = dict(\n",
+    "    features_extractor_class=FE_MM_net,\n",
+    "    features_extractor_kwargs=dict(features_dim=16),\n",
+    "    net_arch=[80, 80]\n",
+    ")\n",
+    "\n",
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
+    "\n",
+    "rl_model = sb3.DQN('MlpPolicy', env, verbose=1, policy_kwargs=policy_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DQNPolicy(\n",
+       "  (q_net): QNetwork(\n",
+       "    (features_extractor): FE_MM_net(\n",
+       "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
+       "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
+       "      (fc2_1): Linear(in_features=16, out_features=8, bias=True)\n",
+       "      (fc2_2): Linear(in_features=16, out_features=8, bias=True)\n",
+       "      (fc3): Linear(in_features=16, out_features=16, bias=True)\n",
+       "      (fc4): Linear(in_features=16, out_features=16, bias=True)\n",
+       "    )\n",
+       "    (q_net): Sequential(\n",
+       "      (0): Linear(in_features=16, out_features=80, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=80, out_features=80, bias=True)\n",
+       "      (3): ReLU()\n",
+       "      (4): Linear(in_features=80, out_features=6, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (q_net_target): QNetwork(\n",
+       "    (features_extractor): FE_MM_net(\n",
+       "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
+       "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
+       "      (fc2_1): Linear(in_features=16, out_features=8, bias=True)\n",
+       "      (fc2_2): Linear(in_features=16, out_features=8, bias=True)\n",
+       "      (fc3): Linear(in_features=16, out_features=16, bias=True)\n",
+       "      (fc4): Linear(in_features=16, out_features=16, bias=True)\n",
+       "    )\n",
+       "    (q_net): Sequential(\n",
+       "      (0): Linear(in_features=16, out_features=80, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=80, out_features=80, bias=True)\n",
+       "      (3): ReLU()\n",
+       "      (4): Linear(in_features=80, out_features=6, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rl_model.policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_ppo_mm_ut_dynamic\n",
+    "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_dqn_mm_ut_dynamic'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0613,  0.0038,  0.0910, -0.1583,  0.0962,  0.0991]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rl_model.policy.q_net_target(sample1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model containing features_extractor, mlp_extractor.policy_net, action_net\n",
+    "class DQN_MM_net(nn.Module):\n",
+    "    def __init__(self, original_model):\n",
+    "        super(DQN_MM_net, self).__init__()\n",
+    "        self.q_net = original_model.policy.q_net\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.q_net(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dqn_mm_model = DQN_MM_net(rl_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(dqn_mm_model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, train_loader, criterion, optimizer):\n",
+    "    model.train()\n",
+    "    train_loss = 0\n",
+    "    correct = 0\n",
+    "    for state, target in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(state)\n",
+    "        loss = criterion(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_loss += loss.item() * state.size(0)\n",
+    "        pred = output.argmax(dim=1, keepdim=True)\n",
+    "        correct += pred.eq(target.argmax(dim=1, keepdim=True)).sum().item()\n",
+    "    train_loss /= len(train_loader.dataset)\n",
+    "    accuracy = 100. * correct / len(train_loader.dataset)\n",
+    "    return train_loss, accuracy\n",
+    "\n",
+    "def test(model, test_loader, criterion):\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    with torch.no_grad():\n",
+    "        for state, target in test_loader:\n",
+    "            output = model(state)\n",
+    "            test_loss += criterion(output, target).item() * state.size(0)\n",
+    "            pred = output.argmax(dim=1, keepdim=True)\n",
+    "            correct += pred.eq(target.argmax(dim=1, keepdim=True)).sum().item()\n",
+    "    test_loss /= len(test_loader.dataset)\n",
+    "    accuracy = 100. * correct / len(test_loader.dataset)\n",
+    "    return test_loss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 50\n",
+    "test_acc = 0\n",
+    "for epoch in range(1, epochs+1):\n",
+    "    train_loss, train_acc = train(dqn_mm_model, train_pr_dataloader, criterion, optimizer)\n",
+    "    test_loss, test_acc = test(dqn_mm_model, test_pr_dataloader, criterion)\n",
+    "    print(f'Epoch {epoch}: Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.2f}%, Test Loss: {test_loss:.4f}, Test Acc: {test_acc:.2f}%')\n",
+    "    if test_acc > 95:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl_model.policy.q_net.load_state_dict(dqn_mm_model.features_extractor.state_dict())\n",
+    "rl_model.policy.q_net_target.load_state_dict(dqn_mm_model.features_extractor.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_ppo_mm_pr_dynamic\n",
+    "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_dqn_mm_pr_dynamic'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DQN Single-modal Dynamic (Untrained + Pretrained)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FE_SM_net(BaseFeaturesExtractor):\n",
+    "    def __init__(self, observation_space: spaces.Box, features_dim: int = 16):\n",
+    "        super(FE_SM_net, self).__init__(observation_space, features_dim)\n",
+    "        self.fc1 = nn.Linear(12, 16) # 5 Nodes status (CPU, Memory)\n",
+    "        self.fc2 = nn.Linear(16, 16)    # Last layer of FE_net\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_kwargs = dict(\n",
+    "    features_extractor_class=FE_SM_net,\n",
+    "    features_extractor_kwargs=dict(features_dim=16),\n",
+    "    net_arch=[80, 80]\n",
+    ")\n",
+    "\n",
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
+    "\n",
+    "rl_model = sb3.DQN('MlpPolicy', env, verbose=1, policy_kwargs=policy_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl_model.policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_ppo_mm_ut_dynamic\n",
+    "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_dqn_sm_ut_dynamic'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl_model.policy.q_net_target(sample1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model containing features_extractor, mlp_extractor.policy_net, action_net\n",
+    "class DQN_SM_net(nn.Module):\n",
+    "    def __init__(self, original_model):\n",
+    "        super(DQN_MM_net, self).__init__()\n",
+    "        self.q_net = original_model.policy.q_net\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.q_net(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dqn_sm_model = DQN_SM_net(rl_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(dqn_sm_model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, train_loader, criterion, optimizer):\n",
+    "    model.train()\n",
+    "    train_loss = 0\n",
+    "    correct = 0\n",
+    "    for state, target in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(state)\n",
+    "        loss = criterion(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_loss += loss.item() * state.size(0)\n",
+    "        pred = output.argmax(dim=1, keepdim=True)\n",
+    "        correct += pred.eq(target.argmax(dim=1, keepdim=True)).sum().item()\n",
+    "    train_loss /= len(train_loader.dataset)\n",
+    "    accuracy = 100. * correct / len(train_loader.dataset)\n",
+    "    return train_loss, accuracy\n",
+    "\n",
+    "def test(model, test_loader, criterion):\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    with torch.no_grad():\n",
+    "        for state, target in test_loader:\n",
+    "            output = model(state)\n",
+    "            test_loss += criterion(output, target).item() * state.size(0)\n",
+    "            pred = output.argmax(dim=1, keepdim=True)\n",
+    "            correct += pred.eq(target.argmax(dim=1, keepdim=True)).sum().item()\n",
+    "    test_loss /= len(test_loader.dataset)\n",
+    "    accuracy = 100. * correct / len(test_loader.dataset)\n",
+    "    return test_loss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 50\n",
+    "test_acc = 0\n",
+    "for epoch in range(1, epochs+1):\n",
+    "    train_loss, train_acc = train(dqn_sm_model, train_pr_dataloader, criterion, optimizer)\n",
+    "    test_loss, test_acc = test(dqn_sm_model, test_pr_dataloader, criterion)\n",
+    "    print(f'Epoch {epoch}: Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.2f}%, Test Loss: {test_loss:.4f}, Test Acc: {test_acc:.2f}%')\n",
+    "    if test_acc > 95:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl_model.policy.q_net.load_state_dict(dqn_sm_model.features_extractor.state_dict())\n",
+    "rl_model.policy.q_net_target.load_state_dict(dqn_sm_model.features_extractor.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_ppo_mm_pr_dynamic\n",
+    "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_dqn_sm_pr_dynamic'))"
    ]
   },
   {
