--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        ")"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,17 +1098,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0613,  0.0038,  0.0910, -0.1583,  0.0962,  0.0991]],\n",
+       "tensor([[ 0.0115,  0.0782, -0.0848, -0.0081, -0.0452, -0.0002]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,9 +1196,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: Train Loss: 120.8093, Train Acc: 49.19%, Test Loss: 65.2617, Test Acc: 62.05%\n",
+      "Epoch 2: Train Loss: 65.6597, Train Acc: 63.43%, Test Loss: 65.1111, Test Acc: 65.98%\n",
+      "Epoch 3: Train Loss: 32.9297, Train Acc: 78.55%, Test Loss: 31.5083, Test Acc: 80.35%\n",
+      "Epoch 4: Train Loss: 30.8340, Train Acc: 80.38%, Test Loss: 29.7295, Test Acc: 81.66%\n",
+      "Epoch 5: Train Loss: 29.6367, Train Acc: 82.08%, Test Loss: 28.5559, Test Acc: 83.30%\n",
+      "Epoch 6: Train Loss: 29.0871, Train Acc: 82.98%, Test Loss: 28.3035, Test Acc: 83.89%\n",
+      "Epoch 7: Train Loss: 28.7944, Train Acc: 83.30%, Test Loss: 28.0355, Test Acc: 83.98%\n",
+      "Epoch 8: Train Loss: 28.6944, Train Acc: 83.31%, Test Loss: 28.2261, Test Acc: 83.99%\n",
+      "Epoch 9: Train Loss: 28.5991, Train Acc: 83.36%, Test Loss: 27.9140, Test Acc: 84.07%\n",
+      "Epoch 10: Train Loss: 28.4962, Train Acc: 83.41%, Test Loss: 27.9215, Test Acc: 84.04%\n",
+      "Epoch 11: Train Loss: 28.4249, Train Acc: 83.49%, Test Loss: 27.8391, Test Acc: 83.95%\n",
+      "Epoch 12: Train Loss: 28.3663, Train Acc: 83.53%, Test Loss: 27.7396, Test Acc: 83.95%\n",
+      "Epoch 13: Train Loss: 28.2546, Train Acc: 83.56%, Test Loss: 27.4379, Test Acc: 84.02%\n",
+      "Epoch 14: Train Loss: 28.1453, Train Acc: 83.55%, Test Loss: 27.3482, Test Acc: 84.07%\n",
+      "Epoch 15: Train Loss: 28.0831, Train Acc: 83.57%, Test Loss: 27.3196, Test Acc: 84.06%\n",
+      "Epoch 16: Train Loss: 27.8835, Train Acc: 83.92%, Test Loss: 27.0273, Test Acc: 84.80%\n",
+      "Epoch 17: Train Loss: 27.0459, Train Acc: 85.11%, Test Loss: 26.2148, Test Acc: 85.82%\n",
+      "Epoch 18: Train Loss: 25.5513, Train Acc: 86.73%, Test Loss: 24.5536, Test Acc: 87.47%\n",
+      "Epoch 19: Train Loss: 24.8256, Train Acc: 87.17%, Test Loss: 24.8814, Test Acc: 86.72%\n",
+      "Epoch 20: Train Loss: 24.5987, Train Acc: 87.27%, Test Loss: 24.0104, Test Acc: 87.67%\n",
+      "Epoch 21: Train Loss: 24.5545, Train Acc: 87.31%, Test Loss: 24.2845, Test Acc: 87.73%\n",
+      "Epoch 22: Train Loss: 24.3532, Train Acc: 87.38%, Test Loss: 23.9429, Test Acc: 87.52%\n",
+      "Epoch 23: Train Loss: 24.5901, Train Acc: 87.26%, Test Loss: 23.7991, Test Acc: 87.88%\n",
+      "Epoch 24: Train Loss: 24.4173, Train Acc: 87.42%, Test Loss: 24.4715, Test Acc: 87.67%\n",
+      "Epoch 25: Train Loss: 24.4109, Train Acc: 87.36%, Test Loss: 25.2457, Test Acc: 86.46%\n",
+      "Epoch 26: Train Loss: 24.2491, Train Acc: 87.51%, Test Loss: 24.2653, Test Acc: 87.68%\n",
+      "Epoch 27: Train Loss: 24.0706, Train Acc: 87.61%, Test Loss: 23.3526, Test Acc: 88.31%\n",
+      "Epoch 28: Train Loss: 24.8257, Train Acc: 87.01%, Test Loss: 26.7095, Test Acc: 86.04%\n",
+      "Epoch 29: Train Loss: 24.5118, Train Acc: 87.23%, Test Loss: 24.1175, Test Acc: 87.53%\n",
+      "Epoch 30: Train Loss: 24.3736, Train Acc: 87.35%, Test Loss: 23.8625, Test Acc: 87.80%\n",
+      "Epoch 31: Train Loss: 24.2133, Train Acc: 87.52%, Test Loss: 24.5150, Test Acc: 86.93%\n",
+      "Epoch 32: Train Loss: 25.0643, Train Acc: 86.64%, Test Loss: 24.8070, Test Acc: 86.02%\n",
+      "Epoch 33: Train Loss: 24.1410, Train Acc: 87.48%, Test Loss: 23.3731, Test Acc: 88.13%\n",
+      "Epoch 34: Train Loss: 23.9822, Train Acc: 87.54%, Test Loss: 25.3860, Test Acc: 86.05%\n",
+      "Epoch 35: Train Loss: 24.3792, Train Acc: 87.29%, Test Loss: 23.7996, Test Acc: 87.58%\n",
+      "Epoch 36: Train Loss: 24.3457, Train Acc: 87.22%, Test Loss: 23.3258, Test Acc: 88.04%\n",
+      "Epoch 37: Train Loss: 23.8289, Train Acc: 87.74%, Test Loss: 23.6801, Test Acc: 87.72%\n",
+      "Epoch 38: Train Loss: 23.9213, Train Acc: 87.68%, Test Loss: 23.4358, Test Acc: 88.12%\n",
+      "Epoch 39: Train Loss: 23.8682, Train Acc: 87.76%, Test Loss: 24.1250, Test Acc: 87.66%\n",
+      "Epoch 40: Train Loss: 24.3705, Train Acc: 87.35%, Test Loss: 24.1707, Test Acc: 87.53%\n",
+      "Epoch 41: Train Loss: 24.0835, Train Acc: 87.69%, Test Loss: 23.7104, Test Acc: 87.95%\n",
+      "Epoch 42: Train Loss: 24.3687, Train Acc: 87.24%, Test Loss: 23.5115, Test Acc: 87.66%\n",
+      "Epoch 43: Train Loss: 24.2469, Train Acc: 87.42%, Test Loss: 23.1075, Test Acc: 88.24%\n",
+      "Epoch 44: Train Loss: 24.5774, Train Acc: 87.10%, Test Loss: 23.6887, Test Acc: 87.61%\n",
+      "Epoch 45: Train Loss: 24.2844, Train Acc: 87.37%, Test Loss: 23.7036, Test Acc: 88.11%\n",
+      "Epoch 46: Train Loss: 24.1586, Train Acc: 87.51%, Test Loss: 23.2832, Test Acc: 88.17%\n",
+      "Epoch 47: Train Loss: 24.6544, Train Acc: 87.10%, Test Loss: 23.3466, Test Acc: 88.19%\n",
+      "Epoch 48: Train Loss: 24.0736, Train Acc: 87.39%, Test Loss: 24.5533, Test Acc: 86.83%\n",
+      "Epoch 49: Train Loss: 24.2568, Train Acc: 87.43%, Test Loss: 23.6942, Test Acc: 87.71%\n",
+      "Epoch 50: Train Loss: 23.6646, Train Acc: 87.84%, Test Loss: 23.5147, Test Acc: 88.16%\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 50\n",
     "test_acc = 0\n",
@@ -1212,17 +1269,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rl_model.policy.q_net.load_state_dict(dqn_mm_model.features_extractor.state_dict())\n",
-    "rl_model.policy.q_net_target.load_state_dict(dqn_mm_model.features_extractor.state_dict())"
+    "rl_model.policy.q_net.load_state_dict(dqn_mm_model.q_net.state_dict())\n",
+    "rl_model.policy.q_net_target.load_state_dict(dqn_mm_model.q_net.state_dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,9 +1327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n"
+     ]
+    }
+   ],
    "source": [
     "policy_kwargs = dict(\n",
     "    features_extractor_class=FE_SM_net,\n",
@@ -1276,16 +1354,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DQNPolicy(\n",
+       "  (q_net): QNetwork(\n",
+       "    (features_extractor): FE_SM_net(\n",
+       "      (fc1): Linear(in_features=12, out_features=16, bias=True)\n",
+       "      (fc2): Linear(in_features=16, out_features=16, bias=True)\n",
+       "    )\n",
+       "    (q_net): Sequential(\n",
+       "      (0): Linear(in_features=16, out_features=80, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=80, out_features=80, bias=True)\n",
+       "      (3): ReLU()\n",
+       "      (4): Linear(in_features=80, out_features=6, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (q_net_target): QNetwork(\n",
+       "    (features_extractor): FE_SM_net(\n",
+       "      (fc1): Linear(in_features=12, out_features=16, bias=True)\n",
+       "      (fc2): Linear(in_features=16, out_features=16, bias=True)\n",
+       "    )\n",
+       "    (q_net): Sequential(\n",
+       "      (0): Linear(in_features=16, out_features=80, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=80, out_features=80, bias=True)\n",
+       "      (3): ReLU()\n",
+       "      (4): Linear(in_features=80, out_features=6, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rl_model.policy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,23 +1411,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0297, -0.0238, -0.0717, -0.0840, -0.1028, -0.0480]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rl_model.policy.q_net_target(sample1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model containing features_extractor, mlp_extractor.policy_net, action_net\n",
     "class DQN_SM_net(nn.Module):\n",
     "    def __init__(self, original_model):\n",
-    "        super(DQN_MM_net, self).__init__()\n",
+    "        super(DQN_SM_net, self).__init__()\n",
     "        self.q_net = original_model.policy.q_net\n",
     "\n",
     "    def forward(self, x):\n",
@@ -1321,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,8 +1529,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rl_model.policy.q_net.load_state_dict(dqn_sm_model.features_extractor.state_dict())\n",
-    "rl_model.policy.q_net_target.load_state_dict(dqn_sm_model.features_extractor.state_dict())"
+    "rl_model.policy.q_net.load_state_dict(dqn_sm_model.q_net.state_dict())\n",
+    "rl_model.policy.q_net_target.load_state_dict(dqn_sm_model.q_net.state_dict())"
    ]
   },
   {
